@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFolder{
    # String name, path
    + {abstract} String getStringTreeFolder()
    + {abstract} void addItem()
    + {abstract} void removeItem()
    + String getPath()
}

class File{}
class Folder{}

AbstractFolder <|-- File
AbstractFolder <|-- Folder
Folder *--> AbstractFolder: files
@enduml